<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Run, Listen, Run</string>
    <string name="enable_tracking_label">Enable tracking</string>
    <string name="disable_tracking_label">Disable tracking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied, but is needed for core functionality.</string>
    <string name="background_location_permission_rationale">The background location permission is needed for enhanced functionality.</string>
    <string name="background_permission_denied_explanation">Background location permission was denied but needed for enhanced functionality.</string>
    <string name="activity_recognition_permission_denied_explanation">Activity recognition permission was denied but needed for enhanced functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="hooray">УРА!</string>
    <string name="fine_location_access_rationale_title_text">Welcome to the Background Location Sample!</string>
    <string name="fine_location_access_rationale_details_text">This sample allows you to receive location updates while using the app.
        \n\n
        In order for this feature to work, please approve access to your location via the button below.
    </string>
    <string name="background_location_access_rationale_title_text">Improve location accuracy!</string>
    <string name="activity_recognition_access_rationale_title_text">Improve activity tracking accuracy!</string>
    <string name="background_location_access_rationale_details_text">
        Dev Tip: Unless you have a valid use case for background location updates, you should instead only request updates while your app is in the foreground (app/foreground service).
        \n\n
        For this app, you would explain why the particular use case requires background location updates and direct user to click \"Allow all the time\" below.
        \n\n
    </string>
    <string name="activity_recognition_access_rationale_details_text">
        Dev Tip: Unless you have a valid use case for background location updates, you should instead only request updates while your app is in the foreground (app/foreground service).
        \n\n
        For this app, you would explain why the particular use case requires background location updates and direct user to click \"Allow all the time\" below.
        \n\n
    </string>
    <string name="enable_fine_location_button_text">Approve Location Access</string>
    <string name="enable_background_location_button_text">Approve Background Location Access</string>
    <string name="enable_activity_recognition_button_text">Approve Activity Recognition Access</string>
    <string name="start_receiving_location">Start Receiving Location Updates</string>
    <string name="stop_receiving_location">Stop Receiving Location Updates</string>
    <string name="enhance_with_background_location_button_text">Enhance with Background Location</string>
    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>
    <string name="batched_location_updates">Batched location updates</string>
    <string name="emptyLocationDatabaseMessage">To start receiving location updates, please click the button below!</string>
    <string name="title_activity_login">Run, Listen, Run: Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="profile">Profile</string>
    <string name="lipsum">Lorem Ipsum</string>
    <string name="bg_location_updates">Background location updates</string>
    <string name="avatar_fragment">Image upload</string>
    <string name="scenario_stop_button_caption">Завершить тренировку</string>
    <string name="scenario_start_button_caption">Начать тренировку</string>
    <string name="training_suspense_by_health_text">Тренировка была прервана автоматически для защиты вашего здоровья от потенциальных физических перегрузок в соответствии с настройками максимальной длительности тренировки на основе вашего уровня подготовки.</string>
    <string name="training_suspense_by_chapter_end_text">Ура! Вы завершили главу!</string>
    <string name="geofences_added">Clue Geofence added</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>
    <string name="not_started_hint"></string>
    <string name="golden_gate_bridge_hint">Go to a bridge with a name that does not match the color that it is!</string>
</resources>