<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <PreferenceCategory
        android:backgroundTint="#E35353"
        android:foregroundTint="#6FDC22"
        android:title="Location">

        <SwitchPreference
            android:defaultValue="false"
            android:key="bg_location_updates"
            android:switchTextOff="dsdsdsd"
            android:switchTextOn="dsdsdsd"
            android:title="@string/bg_location_updates"
            app:switchTextOff="fdfdf"
            app:switchTextOn="dsdsds" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Dummy settings">

        <PreferenceCategory app:title="@string/sync_header">

            <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title" />

            <SwitchPreferenceCompat
                app:dependency="sync"
                app:key="attachment"
                app:summaryOff="@string/attachment_summary_off"
                app:summaryOn="@string/attachment_summary_on"
                app:title="@string/attachment_title" />

        </PreferenceCategory>
        <PreferenceCategory app:title="@string/messages_header">

            <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="reply"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:key="reply"
                app:title="@string/reply_title"
                app:useSimpleSummaryProvider="true" />

        </PreferenceCategory>
    </PreferenceCategory>

</PreferenceScreen>